[tool.poetry]
name = "autonomous-agents"
version = "0.1.0"
description = "Autonomous agents system for blockchain interactions"
authors = ["Md Mohsin Siddiqui <mdmohsinsiddiqui5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
web3 = "^7.4.0"
eth-typing = "^5.0.1"
eth-account = "^0.13.4"
colorlog = "^6.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
